--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,7 @@ body {
 }
 @media only screen and (max-width: 24em) {
   .data {
+    bottom: -3rem;
     width: 100%;
     padding: 1rem;
     -webkit-box-align: center;
